fix(mercadona): enrich product fields via GET /products/{id} - MercadonaProductScraperAdapter now calls GET /products/{id} for each   product after the category listing, populating ean, brand, origin,   legalName, description, allergens, ingredients, storageInstructions,   usageInstructions, mandatoryMentions, productionVariant, dangerMentions,   supplierNames, isBulk, isVariableWeight. - Detail fetch failures are caught and logged (warn), falling back to   null enriched fields so a single unreachable product does not abort   the whole sync. - Added product_generic_detail.json fixture for unit tests. - Updated MercadonaProductScraperAdapterTest to mock /products/{id}   calls (34×) with ignoreExpectOrder + times(34), and replaced the   nullableFieldsAreNull test with detailFieldsShouldBePopulated. - Updated MercadonaSyncE2ETest to mock manyTimes() /products/{id} calls.