@@ -1,6 +1,7 @@
 package com.n1b3lung0.supermarkets.mercadona.infrastructure.adapter.output.scraper;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.springframework.test.web.client.ExpectedCount.times;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.requestTo;
 import static org.springframework.test.web.client.response.MockRestResponseCreators.withSuccess;
 
@@ -44,7 +45,7 @@ class MercadonaProductScraperAdapterTest {
   @BeforeEach
   void setUp() {
     var restTemplate = new RestTemplate();
-    server = MockRestServiceServer.bindTo(restTemplate).build();
+    server = MockRestServiceServer.bindTo(restTemplate).ignoreExpectOrder(true).build();
     // RestClient.create(restTemplate) sends relative URIs to MockRestServiceServer
     adapter =
         new MercadonaProductScraperAdapter(
@@ -62,14 +63,25 @@ class MercadonaProductScraperAdapterTest {
     }
   }
 
-  @Test
-  void fetchProductsBySubcategory_shouldReturn34Products() {
+  /** Registers mock expectations for the subcategory + 34 product detail calls. */
+  private void expectSubcategoryAndDetails() {
     server
         .expect(requestTo(Matchers.endsWith("/categories/112")))
         .andRespond(
             withSuccess(
                 loadFixture("/fixtures/mercadona/subcategory_112.json"),
                 MediaType.APPLICATION_JSON));
+    server
+        .expect(times(34), requestTo(Matchers.containsString("/products/")))
+        .andRespond(
+            withSuccess(
+                loadFixture("/fixtures/mercadona/product_generic_detail.json"),
+                MediaType.APPLICATION_JSON));
+  }
+
+  @Test
+  void fetchProductsBySubcategory_shouldReturn34Products() {
+    expectSubcategoryAndDetails();
 
     var commands =
         adapter.fetchProductsBySubcategory(SUPERMARKET, ExternalCategoryId.of("112"), LEAF_INDEX);
@@ -79,12 +91,7 @@ class MercadonaProductScraperAdapterTest {
 
   @Test
   void fetchProductsBySubcategory_product4241_shouldHaveCorrectPriceAndCategory() {
-    server
-        .expect(requestTo(Matchers.endsWith("/categories/112")))
-        .andRespond(
-            withSuccess(
-                loadFixture("/fixtures/mercadona/subcategory_112.json"),
-                MediaType.APPLICATION_JSON));
+    expectSubcategoryAndDetails();
 
     var commands =
         adapter.fetchProductsBySubcategory(SUPERMARKET, ExternalCategoryId.of("112"), LEAF_INDEX);
@@ -103,12 +110,7 @@ class MercadonaProductScraperAdapterTest {
 
   @Test
   void fetchProductsBySubcategory_product4641_previousUnitPriceShouldBeStripped() {
-    server
-        .expect(requestTo(Matchers.endsWith("/categories/112")))
-        .andRespond(
-            withSuccess(
-                loadFixture("/fixtures/mercadona/subcategory_112.json"),
-                MediaType.APPLICATION_JSON));
+    expectSubcategoryAndDetails();
 
     var commands =
         adapter.fetchProductsBySubcategory(SUPERMARKET, ExternalCategoryId.of("112"), LEAF_INDEX);
@@ -122,23 +124,22 @@ class MercadonaProductScraperAdapterTest {
   }
 
   @Test
-  void fetchProductsBySubcategory_nullableFieldsAreNull() {
-    server
-        .expect(requestTo(Matchers.endsWith("/categories/112")))
-        .andRespond(
-            withSuccess(
-                loadFixture("/fixtures/mercadona/subcategory_112.json"),
-                MediaType.APPLICATION_JSON));
+  void fetchProductsBySubcategory_detailFieldsShouldBePopulated() {
+    expectSubcategoryAndDetails();
 
     var commands =
         adapter.fetchProductsBySubcategory(SUPERMARKET, ExternalCategoryId.of("112"), LEAF_INDEX);
 
-    var any = commands.get(0);
-    assertThat(any.ean()).isNull();
-    assertThat(any.legalName()).isNull();
+    var any = commands.getFirst();
+    // detail fields come from product_generic_detail.json fixture
+    assertThat(any.ean()).isEqualTo("8480000004241");
+    assertThat(any.brand()).isEqualTo("Hacendado");
+    assertThat(any.origin()).isEqualTo("España");
+    assertThat(any.legalName()).isEqualTo("Aceite de oliva 0,4º");
     assertThat(any.isBulk()).isFalse();
     assertThat(any.isVariableWeight()).isFalse();
-    assertThat(any.supplierNames()).isEmpty();
+    assertThat(any.supplierNames()).containsExactly("Proveedor Test S.A.");
+    assertThat(any.ingredients()).isEqualTo("Aceite de oliva");
   }
 
   @Test
